minisession.css
/* Sticky footer styles */
html {
  position: relative;
  min-height: 100%;
}
body {
  /* Margin bottom by footer height */
  margin-bottom: 450px;
  
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 450px;
  background-color: #303C42;
}

/* Custom page CSS
-------------------------------------------------- */
body {
	font-family: "Gotham A", "Gotham B", Gotham, Helvetica, Arial, sans-serif;
	margin-top: 100px;
}


h1 {
	font-size: 28px;
	line-height: 36px;
	margin-bottom: 1em;
	font-family: "Gotham A", "Gotham B", Gotham, Helvetica, Arial, sans-serif;
}

h1:first-of-type {
	margin-bottom: 0em;
}

h1:last-of-type {
	margin-top: 10px;
	margin-bottom: 2em;
}

h2 {
	font-size: 22px;
	line-height: 36px;
	margin-bottom: 1em;
	font-family: "Gotham A", "Gotham B", Gotham, Helvetica, Arial, sans-serif;
}
	
h3 {
	font-size: 20px;
	line-height: 36px;
	font-family: "Gotham A", "Gotham B", Gotham, Helvetica, Arial, sans-serif;
}

p { 
	font-family: "Whitney A", "Whitney B", Whitney, Helvetica, Arial, sans-serif;
	margin-bottom: 1em;
	font-size: 16px;
	line-height: 24px;
}

ul {
	font-family: "Whitney A", "Whitney B", Whitney, Helvetica, Arial, sans-serif;
	font-size: 16px;
	line-height: 24px;
}	

.divider {
	font-family: "Gotham A", "Gotham B", Gotham, Helvetica, Arial, sans-serif;
	border-bottom: 1px solid #F38A00;
	color: #F38A00;
	font-size: 14px;
	font-weight: 700;
	padding-bottom: .5em;
	margin-bottom: 40px;
	margin-top: 0px;
	padding-left: 0em;
}

.content-block {
	padding-left: 0px;
	padding-right: 0px;
}

.detail-block { 
	padding-left: 0px;
	padding-right: 0px;
}

.register-block {
	margin-bottom: 3em;
}

.col-md-6 {
	padding-left: 0px;
}

.course {
	background-color: #F1F2F4;
	padding: 20px;
	margin-bottom: 40px;
}

.course:first-of-type {
	margin-top: 20px;
}

.course:last-of-type {
	margin-bottom: 0px;
}
	
.course h2 {
	margin-top: 10px;
}
	
.course-description p:last-of-type {
	margin-bottom: 0px;
}
	
.extended-description p:first-of-type {
	margin-top: 1em;
}
	
.course .btn {
	margin-bottom: 10px;
	margin-top: 30px;
}

.course img { 
	display: none;
}

.yourEducator {
	display: none;
}

.detail-block {
	margin-bottom: 2em;
}

.detail-block:last-of-type {
	margin-bottom: 0px;
}
	
footer .btn {
	background-color: #418fde;
}

.btn {
	width: 100%;
	padding: 20px;
	margin-top: 20px;
	margin-bottom: 20px;
	background-color: #418fde;
	border-radius: 0px;
}

.register-button-block .btn {
	margin-top: 0px;
}

a:link, a:hover, a:visited, a:active {
	text-decoration: none;
}

.bold {
	font-weight: 700;
}

.blue {
	color: #3172AE;
}

.orange {
	color: #F38A00;
}

.white {
	color: #FFFFFF;
}

.bottomSpace {
	margin-bottom: 1.5em;
}

.content-block:last-of-type {
	padding-bottom: 50px;
}

.row {
	margin-bottom: 40px;
}

.row:first-of-type {
	padding-top: 20px;
}

.row:last-of-type {
	margin-bottom: 0px;
}

.col-sm-6 {
	padding: 0px;
	vertical-align: middle;
}

.col-sm-6 .btn {
	margin-top: 0px;
}

.extra-padding {
	padding-right: 0px;
}

.instructor {
	margin-top: 20px;
	margin-bottom: 20px;
	background-color: #97AAC6;
	padding: 10px;
	text-align: center;
}

.yourEducator {
	color: #ffffff;
	background-color: #97AAC6;
	font-weight: 700;
	text-transform: uppercase;
}

.round {
	width: 100%;
	height: 100%;
	-webkit-border-radius: 100%;
	-moz-border-radius: 100%;
	border-radius: 100%;
}
	
.rectangle {
	width: 100%;
} 

/* Accordion */
#accordion {
	padding-top: 15px;
}

.panel-group .panel + .panel {
	margin-top: 30px;
}

.panel-default {
	border: none;
}

.panel-default > .panel-heading {
	background-color: #97aac6;
}

.panel-heading {
	border-top-left-radius: 0px;
	border-top-right-radius: 0px;
	cursor: pointer;
}

.panel-heading > h3 {
	line-height: 30px;
	margin: 0px;
}

.panel-body {
	background-color: #F1F2F4;
	border-top: 0px;
	margin-bottom: 30px;
	border-bottom-left-radius: 0px;
	border-bottom-right-radius: 0px;
}

.panel-body > h3 {
	margin-top: 0px;
}

.panel-body > p:last-of-type {
	margin-bottom: 0px;
}

/* Nav */
.navbar-inverse .navbar-toggle, .navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
    background-color: #2A5C89;
	border: 4px solid #2A5C89;
	border-radius: 0px;
}

.navbar-inverse .navbar-collapse {
	border: none;
}

.navbar-custom {
	background-color: #3172AE;
	border: none;
	padding: 10px;
}

.navbar-custom #navbar li a {
	color: #ffffff;
	font-size: 18px;
	line-height: 45px;
	border-bottom: 1px solid transparent;
}

.navbar-custom #navbar li a:hover {
	color: #cfd8dc;
}

.navbar-custom #navbar li a:hover {
	color: #cfd8dc;
}

.navbar-custom #navbar li.active a {
	background: #346094;
}

.navbar-custom #navbar li:last-of-type {
	margin-right: 15px;
}

.navbar-brand {
	width: 60%;
	height: auto;
	min-width: 150px;
	max-width: 200px;
}

.navbar-right {
	margin-top: 0px;
}

/* Footer */
#footer {
   position:fixed;
   left:0px;
   bottom:0px;
   height:30px;
   width:100%;
   background:#3172AE;
}

footer li {
	color: #ffffff;
}

.footer {
	text-align: center;
	padding: 40px 0px;
	background-color: #3172AE;
}

footer p {
	color: #cfd8dc;
	font-size: 14px;
}

footer h3 {
	color: #ffffff;
	font-size: 20px;
}

footer a {
	color: #cfd8dc;
}

footer a:hover, footer a:active {
	color: #ffffff;
	text-decoration: none;
}

footer ul {
	list-style: none;
	padding: 0px;
}

footer img {
	width: 80%;
	margin-top: 50px;
}

.footer h3, .footer li {
	text-align: left;
}

.footer h3 {
	margin-top: 60px;
	margin-left: 40px;
	margin-right: 40px;
}
	
.footer li {
	margin-left: 40px;
	margin-right: 40px;
}

/* Custom Buttons */
.btn-blue { 
  color: #ffffff; 
  background-color: #3172AE; 
  border: none; 
  font-size: 20px;
} 
 
.btn-blue:hover, 
.btn-blue:focus, 
.btn-blue:active, 
.btn-blue.active, 
.open .dropdown-toggle.btn-blue { 
  color: #ffffff; 
  background-color: #0E5CAB; 
  border: none; 
} 
/* ... */

